Modernized the code